--- a/css/inical_temp.css
+++ b/css/inical_temp.css
@@ -142,9 +142,31 @@
 	font: normal 8pt/1.3em "droid_serif", Tahoma;
 	color: #004961;
 }
-
+@media only screen and (min-width: 1280px) and (max-width: 1500px) {
+	#home_comotrabalhamos {
+		min-width: 1301px;
+	}
+	#home_comotrabalhamos > div {
+		width: 550px;
+		height: 550px;
+	}
+}
+@media only screen and (min-width: 1025px) and (max-width: 1279px) {
+	#home_comotrabalhamos {
+		min-width: 1100px;
+	}
+	#home_comotrabalhamos > div {
+		width: 550px;
+		height: 550px;
+	}
+	/*#home_comotrabalhamos .trabalho-item:hover {
+		margin: 4% auto;
+	}*/
+}
 @media only screen and (min-width: 481px) and (max-width: 1024px) {  
-	
+	#home_comotrabalhamos {
+		min-width: 100%;
+	}
 	#home_trabalhos .trabalhos_recentes {
 		position: relative;
 	}
@@ -165,9 +187,9 @@
 		background: #fff;
 		border-color: #336d81;
 	}
-	#home_comotrabalhamos .tb-item {
+	/*#home_comotrabalhamos .tb-info {
 		margin: 50% auto;
-	}
+	}*/
 	#home_comotrabalhamos .tb-info-wrap {
 		left: 40px;
 	}
@@ -224,109 +246,7 @@
 #home_comotrabalhamos .trabalhamos_2 {
 	background: #8dc63f !important;
 }*/
-#home_comotrabalhamos .trabalhamos_2 .trabalho-item {
-	background: #004961;
-}
-#home_comotrabalhamos .trabalhamos_3 .trabalho-item {
-	background: #fdba31;
-}
-#home_comotrabalhamos .trabalhamos_4 .trabalho-item {
-	background: #FFF;
-}
-#home_comotrabalhamos .trabalhamos_4 .tb-info-frente .texto h4 {
-	color: #004961;
-}
-
-.trabalho-item {
-	height: 100%;
-	width: 100%;
-	margin: 0 auto;
-	-webkit-transition: all 0.2s ease-in-out 0.2s;
-	-moz-transition: all 0.4s ease-in-out 0.2s;
-	-o-transition: all 0.4s ease-in-out 0.2s;
-	-ms-transition: all 0.4s ease-in-out 0.2s;
-	transition: all 0.3s ease-in-out 0.3s;
-	
-	border: 0px solid #8dc52f;
-	position: relative;
-}
-.trabalho-item:hover {
-	height: 400px;
-	width: 400px;
-	/*background: #fff;*/
-	border-radius: 50%;
-	margin: 0 auto;
-	border: 30px solid #8dc63f;
-	position: relative;
-}
-.trabalho-item .tb-info {
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	text-align: center;
-	margin: 0 auto;
-}
-.trabalho-item .tb-info .tb-info-tras {
-	width: 250px;
-	height: 250px;
-	position: initial;
-	border-radius: 50%;
-	margin: 80px auto;
-	background: #fff;
-	
-	opacity: 0;
-	-webkit-transform: scale(0);
-    -moz-transform: scale(0.1);
-	-o-transform: scale(0.1);
-	-ms-transform: scale(0.1);
-    -webkit-transition: all 0.3s ease-in-out 0.2s;
-	-moz-transition: all 0.4s ease-in-out 0.2s;
-	-o-transition: all 0.4s ease-in-out 0.2s;
-	-ms-transition: all 0.4s ease-in-out 0.2s;
-	transition: all 0.2s ease-in-out 0.2s;
-}
-.trabalho-item .tb-info .tb-info-tras h4 {
-	margin-top: 20px;
-	display: inline-block;
-}
-.trabalho-item .tb-info .tb-info-tras p {
-	padding: 30px 40px;	
-
-}
-
-.trabalho-item:hover .tb-info .tb-info-tras {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-o-transform: scale(1);
-	-ms-transform: scale(1);
-}
-.trabalho-item:hover .tb-info-frente {
-	opacity: 0;
-	
-}
-.tb-info-frente {
-	margin: 15% auto;
-	opacity: 1;
-	-webkit-transition: all 0.2s ease-in-out 0.2s;
-	-moz-transition: all 0.4s ease-in-out 0.2s;
-	-o-transition: all 0.4s ease-in-out 0.2s;
-	-ms-transition: all 0.4s ease-in-out 0.2s;
-	transition: all 0.2s ease-in-out 0.2s;
-}
-.tb-info-frente .texto {
-	display: block;
-}
-.tb-info-frente .texto h4 {
-	font: normal 18pt/1em "nexa_bold", Tahoma;
-	display: inline-block;
-	border-bottom: 2px solid #336d81;
-	padding-bottom: 5px;
-	text-transform: uppercase;
-	margin-top: 20px;
-	color: #fff;
-}
-					
+				
 /* fim do como trabalhamos*/
 
 
