Criação da tela SOBRE

--- a/css/styles-responsive.css
+++ b/css/styles-responsive.css
@@ -371,6 +371,113 @@
 		margin: -50px 0 0 -50px;
 		z-index: 9999;
 	}
+	
+	
+	
+	/*******************************************************************/
+	/***************** PÁGINA NOTICIAS *********************************/
+	/*******************************************************************/
+	#noticia .noticia-info {
+		width: 100%;
+		padding: 55px 0px 100px 0px;
+	}
+	
+	#noticia .noticia-info .wrapper_noticia {
+		width: 100%;
+		
+	}	
+	#noticia .noticia-info .wrapper_noticia .noticia {
+		margin-left: 0px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia h2 {
+		line-height: 1.3em;
+		width: 70%;
+		font-size: 26pt;	
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia {
+		margin-bottom: 0px;
+		
+	}
+	#noticia .noticia-info .wrapper_noticia .categorias {
+		width: 17%/*200px*/;
+		margin-left: 20;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia {
+		box-shadow: none;
+		border-bottom: none;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download {
+		float: none;
+		width: 27%;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download h4 {
+		font-size: 14pt;
+		line-height: 1.3em;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li {
+		font-size: 10pt;
+		line-height: 1.3em;
+	}
+	#noticia .noticia-info .wrapper_noticia .categorias ul li, #noticia .wrapper_noticia .categorias ul li a {
+		font-size: 16px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .texto_noticia {
+		margin-right: 20px;
+		margin-left: 100px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .continue_lendo, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra a {
+		width: 60px;
+		height: 60px;
+		
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .continue_lendo:before {
+		line-height: 60px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_face, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_google, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_twitter {
+		line-height: 60px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_face {
+		top: 90px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_google {
+		top: 180px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_twitter {
+		top: 270px;
+	}
+	#noticia .noticias_ultimas {
+		width: 100%;
+		height: 700px;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas {
+		width: 100%;
+		margin: 0 0px 90px 0px;
+		display: block;
+		margin-left: 20;
+		width: auto;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas h3 {
+		display: block;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada {
+		width: 31%;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada:nth-child(odd) {
+		margin: 0 2.5%;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada h4 {
+		font-size: 12pt;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada h5 {
+		line-height: 1.3em;
+		margin-top: 25px; 
+	}
+	/*******************************************************************/
+	/***************** FIM PÁGINA NOTICIAS *****************************/
+	/*******************************************************************/
 }
 
 /*iphone
@@ -985,6 +1092,142 @@
 	#especialidades .especialidades_formulario {
 		display: none;
 	}
+	
+	/*******************************************************************/
+	/***************** PÁGINA NOTICIAS *********************************/
+	/*******************************************************************/
+	#noticia .noticia-info {
+		padding-bottom: 350px;
+	}
+	#noticia .noticia-info .wrapper_noticia{
+		width: 100%;
+		margin: 0px;
+	}
+	#noticia .noticia-info .wrapper_noticia .categorias,
+	#noticia .noticia-info .wrapper_noticia .noticia {
+		width: 100%;
+		margin: 0px;
+	}
+	#noticia .noticia-info .wrapper_noticia .categorias h5,
+	#noticia .noticia-info .wrapper_noticia .categorias ul {
+		padding-left: 20px;
+	}
+	
+	#noticia .noticia-info .wrapper_noticia .categorias ul li{
+		display: inline;	
+	}
+	
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia {
+		border: none;
+		box-shadow: none;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia h2 {
+		width: 95%;
+		font-size: 16pt;
+		padding-left: 20px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download {
+		display: none;
+	}
+	
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe {
+		position: relative;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia {
+		margin-bottom: 0px;
+		padding-bottom: 10px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .data_publicacao h3 {
+		margin-bottom: 20px;
+		padding-left: 20px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia {
+		height: 100px;
+		width: 100%;
+		bottom: -150;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra  .continue_lendo {
+		display:none;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_face, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_google, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_twitter {
+		opacity: 1;
+		display: inline-block;
+		position: static;
+		background: #fdba31;
+		color: #fff;
+		box-shadow: 0px 0px 0px 8px #fdba31;	
+		margin: 0 15px;				
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .share_mobile {
+		display:block;
+		text-align: center;
+		margin-left: -40px;
+		margin-bottom: 30px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra {
+		text-align: center;
+		margin-left: -30px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .share_mobile h3{
+		font: normal 22pt/1.5em nexa_bold, Times;
+		color: #12425c;	
+		margin-bottom: 25px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .share_mobile h4{
+		font: normal 12pt/1.5em droid_serif, Times;
+		color: #808285;	
+		padding: 0 100px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .continue_lendo, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra a {
+		width: 48px;
+		height: 48px;
+		
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_face, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_google, 
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_twitter {
+		line-height: 48px;
+	}
+	#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .texto_noticia {
+		margin: 0px 40px 0px 20px;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas {
+		width: 100%;
+		margin: 0 20px 90px 00px;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada, #noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada:nth-child(odd) {
+		float: none;
+		width: 95%;
+		padding-left:20px;
+		margin: 0 0 20px 0;
+	}
+	#noticia .noticias_ultimas {
+		height: auto;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas h3 {
+		display: block;
+		text-align: center;
+		margin: 40px 0;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada img {
+		display: none;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada h5 {
+		margin: 0px 0px 15px;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada p {
+		display: none;
+	}
+	#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada .ultimas_leiamais:before {
+		content: '';
+	}
+	/*******************************************************************/
+	/***************** FIM PÁGINA NOTICIAS *****************************/
+	/*******************************************************************/
+	
 	
 }
 
