--- a/css/styles.css
+++ b/css/styles.css
@@ -1653,15 +1653,16 @@ text-align: center;*/
 }
 #especialidades .especialidades_items .item .item-child > p {
 	position: absolute;
-	bottom: 40;
+	bottom: 60px;
 	text-align: center;
 	width: 100%;
 	/*display: none;*/
 	opacity: 0;
-	font: normal 16pt/1.5em nexa_bold, Times;
+	font: normal 12pt/1.3em nexa_bold, Times;
 	color: #fff;
 	margin-left: 40px;
 	width: 200px;
+	letter-spacing: 1.5px;
 	-webkit-transition: 0.2s ease-in-out 1.2s;
 	-moz-transition: all 0.2s ease-in-out 0.2s;
 	-o-transition: all 0.2s ease-in-out 0.2s;
@@ -1702,13 +1703,14 @@ text-align: center;*/
 }
 #especialidades .especialidades_drag_items:before, #especialidades .especialidades_drag_items_min:before { 
 	content: 'Arraste até aqui as especialidades que você gostaria de conhecer melhor.';
-	font: normal 22pt/1.5em nexa_bold, Times;
+	font: normal 18pt/1.5em nexa_bold, Times;
 	color: #fff;
-	margin: 30px 0 0 205px;
+	margin: 40px 0 0 205px;
 	text-align: center;
 	position: absolute;
 	line-height: 1.4;
 	width: 60%;
+	letter-spacing: 1px;
 	
 }
 #especialidades .especialidades_drag_items_min:before { 
@@ -1716,6 +1718,7 @@ text-align: center;*/
 	color: #fff;
 	margin: 15px 0 0 175px;
 	width: 80%;
+	letter-spacing: 1px;
 }
 #especialidades .ocultar_frase:before {
 	content: '';	
@@ -1729,11 +1732,11 @@ text-align: center;*/
 	border-radius: 90px;
 	padding: 0 30px;
 	position: relative;
-	-webkit-transition: 0.2s ease-in-out 0.2s;
+	/*-webkit-transition: 0.2s ease-in-out 0.2s;
 	-moz-transition: all 0.2s ease-in-out 0.2s;
 	-o-transition: all 0.2s ease-in-out 0.2s;
 	-ms-transition: all 0.2s ease-in-out 0.2s;
-	transition: all 0.2s ease-in-out 0.2s;
+	transition: all 0.2s ease-in-out 0.2s;*/
 }
 #especialidades .especialidades_drag_items .wrapper_items{
 	width: 95%;
@@ -1788,13 +1791,13 @@ text-align: center;*/
 	background: #97d346;
 	border-radius: 90px;
 	padding: 0 10px;
-	box-shadow: 1px 9px #78a936;
+	box-shadow: 1px 9px rgba(0, 0, 0, 0.15);
 	text-align: center;
-	-webkit-transition: 0.2s ease-in-out 0.2s;
+	/*-webkit-transition: 0.2s ease-in-out 0.2s;
 	-moz-transition: all 0.2s ease-in-out 0.2s;
 	-o-transition: all 0.2s ease-in-out 0.2s;
 	-ms-transition: all 0.2s ease-in-out 0.2s;
-	transition: all 0.2s ease-in-out 0.2s;
+	transition: all 0.2s ease-in-out 0.2s;*/
 }
 #especialidades .especialidades_drag_items_min .wrapper_items img:first-child{
 	margin-left: 50px;	
@@ -1939,3 +1942,241 @@ text-align: center;*/
 	padding: 10px 30px;
 	text-transform: uppercase;
 }
+
+
+
+/*******************************************************************/
+/***************** PÁGINA NOTICIAS *********************************/
+/*******************************************************************/
+#noticia .titulo_padrao_1 h1{
+	border-bottom: 1px solid #e6e7e8;
+	padding-bottom: 60px;
+}
+#noticia .noticia-info {
+	background: #fff;
+	padding-top: 55px;
+	padding-bottom: 200px;
+}
+#noticia .noticia-info .wrapper_noticia {
+	width: 1024px;
+	margin: 0 auto;
+	
+}
+#noticia .noticia-info .wrapper_noticia .categorias {
+	display: inline-block;
+	width: 19%/*200px*/;
+	float: left;
+}
+#noticia .noticia-info .wrapper_noticia .categorias h5 {
+	font: normal 12pt/1.5em nexa_bold, Times;
+	color: #bdbdbd;
+	letter-spacing: 1.5px;
+	
+}
+#noticia .noticia-info .wrapper_noticia .categorias ul {
+	padding: 0;
+} 
+#noticia .noticia-info .wrapper_noticia .categorias ul li, #noticia .wrapper_noticia .categorias ul li a {
+	list-style: none;
+	text-transform: uppercase;
+	font: normal 22pt/1.5em nexa_bold, Times;
+	color: #78a22f;
+	text-decoration: none;
+	letter-spacing: 1.5px;
+}
+#noticia .noticia-info .wrapper_noticia .categorias ul li a:hover {
+	color: #fdba31;
+}
+#noticia .noticia-info .wrapper_noticia .noticia{
+	display: inline-block;
+	width: 77% /* 800px*/;
+	margin-left: 2.5%/*24px*/;
+}
+
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia {
+	margin-bottom: 30px;
+	padding-bottom: 30px;
+	border-bottom: 1px solid #f2f2f2;
+	display: inline-block;
+	box-shadow: 0px 1px 0px 0px #cacaca;
+}
+
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia h2 {
+	width: 62%/*500px*/;
+	font: normal 28pt/1.5em nexa_bold, Times;
+	color: #004961;
+	float: left;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download {
+	display: inline-block;
+	float: right;
+	width: 33%/*270px*/;
+	margin-left: 2.4%/*30px*/;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download h4{
+	font: normal 16pt/1.5em nexa_bold, Times;
+	color: #bdbdbd;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul {
+	padding: 0;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li{
+	list-style: none;
+	font: normal 12pt/1.5em droid_serif, Times;
+	color: #6c6c6c;
+	text-align: right;
+	border-bottom: 1px solid #ebeced;
+	margin-bottom: 5px;
+	padding-bottom: 5px;
+	position: relative;
+	margin-left: -10px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li a {
+	color: #6c6c6c;
+	width: 80%;
+	display: inline-block;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li a:hover,
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li a:hover:before   {
+	color: #8dc63f;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul {
+	padding-left: 15;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .titulo_noticia .recursos_download ul li a:before {
+	content: 'V';
+	position: absolute;
+	left: 0;
+	color: #c1c1c1;
+}
+
+#noticia .noticia-info .wrapper_noticia .noticia .data_publicacao {
+	clear: both;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .data_publicacao h3 {
+	font: normal 16pt/1.5em nexa_bold, Times;
+	color: #78a22f;
+	margin-bottom: 40px;
+	letter-spacing: 1.5px;
+}
+
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia {
+	width: 100px;
+	position: absolute;
+	display: block;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .texto_noticia {
+	margin-left: 120px;
+	font: normal 12pt/1.8em droid_serif, Times;
+	color: #6c6c6c;
+}
+#noticia .noticias_ultimas .wrapper_ultimas {
+	width: 1024px;
+	margin: 0 auto;
+	display: table;
+	margin-bottom: 90px;
+}
+#noticia .noticias_ultimas .wrapper_ultimas h3 {
+	font: normal 22pt/1.5em nexa_bold, Times;
+	color: #004961;
+	margin: 40px 0 50px;
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada {
+	width: 30%;
+	float: left;
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada:nth-child(odd) {
+	margin: 0 4%;	
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada h4{
+	font: normal 16pt/1.5em nexa_bold, Times;
+	color: #78a22f;
+	margin-bottom: 15px;
+	letter-spacing: 1.5px;
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada img{
+	width: 100%;
+	height: auto;	
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada h5{
+	font: normal 16pt/1.5em nexa_bold, Times;
+	color: #004961;
+	margin: 45px 0 20px;		
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada p {
+	font: normal 12pt/1.5em droid_serif, Times;
+	color: #4f4e4e;
+	margin-bottom: 40px;		
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada .ultimas_leiamais {
+	text-align: center;
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada .ultimas_leiamais a{
+	height: 15px;
+	width: 50px;
+	display: inline-block;
+	margin-left: -50px;	
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada .ultimas_leiamais:before {
+	content: "OOO";
+	color: #bdbdbd;	
+}
+#noticia .noticias_ultimas .wrapper_ultimas .ultima_adicionada .ultimas_leiamais:hover:before {
+	color: #8dc63f;
+}
+
+
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .continue_lendo,
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra a {
+	position: absolute;
+	width: 70px;
+	height: 70px;
+	/*border: 9px solid #004961;*/
+	box-shadow: 0px 0px 0px 9px #004961;
+	border-radius: 50%;
+	text-align: center;			
+	-webkit-transition: 0.3s;	
+	margin-left: 5%;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .continue_lendo:before {
+	content: 'CCC';
+	color: #fdba31;
+	line-height: 70px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .continue_lendo{
+	background: #004961;
+	box-shadow:none;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_face,
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_google,
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra .compartilhar_twitter {
+	opacity: 0;
+	top: 0;
+	z-index: 1;
+	-webkit-transition: 0.3s;
+	-webkit-animation: 0.2s;
+	color: #fdba31;
+	line-height: 70px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover {
+	height: 400px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_face {
+	opacity: 1;
+	top: 100px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_google {
+	opacity: 1;
+	top: 200px;
+}
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .compartilhar_noticia_integra:hover .compartilhar_twitter {
+	opacity: 1;
+	top: 300px;
+}	
+#noticia .noticia-info .wrapper_noticia .noticia .noticia_detalhe .share_noticia .share_mobile {
+	display:none;
+}
+
+/*******************************************************************/
+/***************** FIM PÁGINA NOTICIAS *****************************/
+/*******************************************************************/
